--- a/service1/Jenkinsfile
+++ b/service1/Jenkinsfile
@@ -8,7 +8,7 @@ pipeline {
 
         stage('Development Branch'){
             when {
-               branch 'development' 
+               branch: 'development' value: 'yes'
             }
             steps{
                 script{
@@ -18,7 +18,7 @@ pipeline {
         }
         stage('Master Branch'){
             when {
-               branch 'master' 
+               branch: 'master' value: 'yes'
             }
             steps{
                 script{
