--- a/service1/Jenkinsfile
+++ b/service1/Jenkinsfile
@@ -8,7 +8,7 @@ pipeline {
 
         stage('Development Branch'){
             when {
-               branch: 'development' value: 'yes'
+               branch: "development" value: "yes"
             }
             steps{
                 script{
@@ -18,7 +18,7 @@ pipeline {
         }
         stage('Master Branch'){
             when {
-               branch: 'master' value: 'yes'
+               branch: "master" value: "yes"
             }
             steps{
                 script{
